# AILab

./: .gitignore  Dockerfile  README.md  a1-refa.ipynb  pyproject.toml
assignment_1/: README.md  assignment_1.ipynb  task.ipynb
assignment_2/: README.md  assignment_2.ipynb
assignment_3/: README.md  assignment_3.ipynb
assignment_4/: README.md  assignment_4.ipynb
assignment_5/: README.md  assignment_5.ipynb
assignments/: README.md
assignments/assignment_2/: assignment_2.ipynb
assignments/assignment_5/: .gitignore  assignment_5.ipynb
assignments/assignment_6/: assignment_6.ipynb
project/: CNN.pth  README.md  Simple_CNN_224x224_Resize_FullRun_1750329418.2939818.pth  Simple_CNN_250x250_Reszize_FullRun_1750517610.1373127.pth  Simple_CNN_250x250_Reszize_FullRun_1750623518.9339395.pth  Simple_CNN_250x250_Reszize_FullRun_1751426180.3164544.pth  SmallEfficientNet.pth  SmallEfficientNet_224x224_Resize_FullRun_1750329418.2939818.pth  SmallEfficientNet_250x250_Reszize_FullRun_1750517610.1373127.pth  SmallEfficientNet_250x250_Reszize_FullRun_1750623518.9339395.pth  SmallEfficientNet_250x250_Reszize_FullRun_1751426180.3164544.pth  SmallEfficientNet_250x250_Reszize_PartialRun_1751444667.4051352.pth  SqueezeNet.pth  SqueezeNet_224x224_Resize_FullRun_1750329418.2939818.pth  SqueezeNet_250x250_Reszize_FullRun_1750517610.1373127.pth  SqueezeNet_250x250_Reszize_FullRun_1750623518.9339395.pth  SqueezeNet_250x250_Reszize_FullRun_1751426180.3164544.pth  best_acc_model.pth  best_val_model.pth  cnn_model_graph  plot.py  project.ipynb  server.py  submission.csv
project/model_archieve/: best_acc_model_98.pth
project/models/: Simple_CNN_250x250_Reszize_FullRun_1750364050.5667918.pth  Simple_CNN_250x250_Reszize_PartialRun_1751444667.4051352.pth  SmallEfficientNet_250x250_Reszize_FullRun_1750364050.5667918.pth  SqueezeNet_250x250_Reszize_FullRun_1750364050.5667918.pth  SqueezeNet_250x250_Reszize_PartialRun_1751444667.4051352.pth
project/templates/: index.html
