[tool.poetry]
name = "ailab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
matplotlib = "^3.10.1"
torch = "^2.6.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "^2.2.4"
tensorboard = "^2.19.0"
standard-imghdr = "^3.13.0"
gdown = "^5.2.0"
spacy = "^3.8.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
